# mini-tesla

./: .gitignore
codigo-auto/: CMakeLists.txt  README.md  fix_lwip.sh  partitions.csv  sdkconfig.defaults
codigo-auto/main/: CMakeLists.txt  hardware_config.h  idf_component.yml  main.c
codigo-auto/main/autonomous_task/: autonomous_task.c  autonomous_task.h
codigo-auto/main/motor_control/: motor_control.c  motor_control.h
codigo-auto/main/vision_engine/: README.md  vision_engine.c  vision_engine.h
codigo-auto/main/wifi_station/: wifi_station.c  wifi_station.h
codigo-auto/main/ws_client/: ws_client.c  ws_client.h
codigo-camara-externa/: CMakeLists.txt
codigo-camara-externa/main/: CMakeLists.txt  idf_component.yml  main.c  main_softap.c  sdkconfig.defaults  test_detection.c  test_detection.h  test_homography.c  test_homography.h
codigo-camara-externa/main/camera_driver/: camera_driver.c  camera_driver.h
codigo-camara-externa/main/softap/: softap.c  softap.h
codigo-camara-externa/main/vision/: homography.c  homography.h  vision.c  vision.h
codigo-camara-externa/main/vision_task/: vision_task.c  vision_task.h
codigo-camara-externa/main/webserver/: webserver.c  webserver.h
codigo-camara-externa/main/wifi/: wifi.c  wifi.h
codigo-camara-externa/main/ws_server/: ws_server.c  ws_server.h
